# multivar_horner

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  example.py  multivar_horner.py  numba_helpers.py  publish.py  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_doc.txt  requirements_tests.in  requirements_tests.txt  runtests.py  setup.cfg  setup.py  speed_test_result_history.txt  speed_test_results.txt  test_it.py  tox.ini
.github/workflows/: build_test.yml
docs/: 0_getting_started.rst  1_usage.rst  2_about.rst  2_api.rst  3_about.rst  3_optimal_factorisation.rst  4_api.rst  7_references.rst  badges.rst  conf.py  index.rst  refs.bib  requirements.txt  requirements_docs.txt
multivar_horner/: __init__.py  _numba_replacements.py  c_evaluation.py  factorisation_classes.py  global_settings.py  helper_classes.py  helper_fcts.py  helpers_fcts_numba.py  multivar_horner.py
multivar_horner/classes/: abstract_poly.py  factorisation.py  helpers.py  horner_poly.py  regular_poly.py
paper/: paper.bib  paper.md
scripts/: numerical_stability.py
tests/: helpers.py  hypothesis_tests.py  main_test.py  numerical_test.py  numerical_tests.py  plotting.py  settings.py  test_helpers.py  test_it.py  test_settings.py
