[tool.poetry]
name = "multivar_horner"
version = "3.1.0"
license = "MIT"
readme = "README.rst"
repository = "https://github.com/jannikmi/multivar_horner"
homepage = "https://multivar-horner.readthedocs.io/en/latest/"
documentation = "https://multivar-horner.readthedocs.io/en/latest/"
keywords = ["mathematics", "polynomials", "evaluation", "multivariate", "horner-scheme"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "python package implementing a multivariate Horner scheme for efficiently evaluating multivariate polynomials"
authors = ["jannikmi <github@michelfe.it>"]
include = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    "CHANGELOG.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "Makefile",
    "README.rst",
    "tox.ini",
    "tests/*.py",
]
#exclude = ["scripts/*.py"]


[tool.poetry.dependencies]
python = ">=3.8,<4"
numpy = ">=1.18,<2"
numba = { version = ">=0.56,<1", optional = true }

[tool.poetry.extras]
numba = ["numba"]

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "*"
tox = "*"
hypothesis = "^6.68.1"
twine = "*"
pre-commit = "*"
rstcheck = "*"
#build = "^0.8.0"
# docs
Sphinx = "^5"
sphinxcontrib-bibtex = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core>=1.0.7", "poetry==1.3.2"]
build-backend = "poetry.core.masonry.api"
