[metadata]
version = file: VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE

[bdist_wheel]
; does not run on Python 2 and 3
universal = 0

[isort]
;https://github.com/timothycrosley/isort/wiki/isort-Settings
known_first_party = multivar_horner
known_third_party = numpy, numba
line_length = 120

[flake8]
max_line_length = 120
;trailing comma
ignore = C819

[tool:multilint]
paths = multivar_horner
        setup.py
        tests

[tool:pytest]
testpaths = tests
;addopts = --cov=multivar_horner
;          --cov-report term-missing

[coverage:run]
;branch = True
include = */multivar_horner/*

[coverage:paths]
source =
    multivar_horner
    .tox/*/site-packages

[coverage:report]
show_missing = True

[mypy]
plugins = pydantic.mypy
